[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/UI/Gameplay/ZoneSelectButtonCompressed.png" type="Texture" id=1]
[ext_resource path="res://Textures/UI/Gameplay/DeckBottomCompressed.png" type="Texture" id=2]
[ext_resource path="res://UI/Gameplay/CardSlot.gd" type="Script" id=3]
[ext_resource path="res://Animations/Animations.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="CardSlot" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayZone" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoneSprite" type="Sprite" parent="PlayZone"]
texture = ExtResource( 2 )

[node name="ConfirmButton" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = -210.0
margin_bottom = -210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSprite" type="Sprite" parent="ConfirmButton"]
texture = ExtResource( 1 )

[node name="Button" type="TouchScreenButton" parent="ConfirmButton"]
position = Vector2( -50, -50 )
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Animations" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="ConfirmButton/Button" to="." method="_on_Button_pressed"]
